--- a/src/components/home/stories/style.css
+++ b/src/components/home/stories/style.css
@@ -12,9 +12,13 @@
     width: 100%;
     border-radius: 10px;
     overflow: hidden;
-    background: #fff;
+    background: var(--bg-third);
     cursor: pointer;
     box-shadow: 0 1px 2px var(--shadow-1);
+}
+
+.create_story_card img {
+    opacity: 0.85;
 }
 
 .create_story_img {
@@ -39,11 +43,11 @@
     justify-content: center;
     background: var(--blue-color);
     cursor: pointer;
-    border: 4px solid #fff;
+    border: 4px solid var(--bg-third);
 }
 
 .story_create_text {
-    color: #000;
+    color: var(--color-primary);
     position: absolute;
     left: 20%;
     top: 87%;
@@ -73,10 +77,10 @@
 
 .story_profile_pic {
     position: absolute;
-    top: 0;
-    left: 0;
-    height: 50px;
-    width: 50px;
+    top: 8px;
+    left: 8px;
+    height: 40px;
+    width: 40px;
     border-radius: 50%;
     overflow: hidden;
     border: 2px solid var(--blue-color);
